SONAR-20424 - Store rules impact within issue